# Lex

./: # Lexical analyzer for Python code.py  README.md  lexical_analyzer.py  pyproject.toml  requirements.txt  source_code.txt  test_lexical_analyzer.py
lex/: __init__.py  __main__.py  cli.py  combine.py  dfa.py  nfa.py  regex_parser.py  simulate.py  spec.py
samples/: sample1.txt  sample2.txt
tests/: test_dfa.py  test_end_to_end.py  test_nfa.py  test_regex_parser.py  test_simulate.py
